--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <version>7.8.0</version>
             <scope>test</scope>
         </dependency>
+		 <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <scope>runtime</scope>
+      <optional>true</optional>
+    </dependency>
     </dependencies>
 
 	<build>
